--- a/Home.html
+++ b/Home.html
@@ -384,7 +384,22 @@
       </div>
       
       <!-- Contact Information -->
-     
+      <div>
+        <h3 class="text-lg font-semibold">Contact Information</h3>
+        <ul class="mt-2 space-y-2 text-sm">
+          <li>📞 +917096336561</li>
+          <li>⏰ 08:00 AM to 21:00 PM</li>
+          <li>📍 C/303, Atlanta Shopping Mall, Surat, Gujarat 394101</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Bottom Section -->
+    <!-- div class="mt-8 border-t border-blue-800 pt-2 flex justify-between">
+        <p class="text-sm pl-10 pt">© Copyright by <a href="" class="font-bold">ZAMS Hospital</a>
+            <p class="text-sm text-right pr-10">© Design by <a href="https://www.instagram.com/musfiq611891/" class="font-bold">Musfiq611891</a>
+    </div!-->
+  </footer>
 
 
 
